syntax = "proto3";

package library;

// Import Google's Empty type
import "google/protobuf/empty.proto";


// gRPC Service Definition

service LibraryServices {
    rpc CreateBook (CreateBookRequest) returns (Book);
    rpc GetBook (GetBookRequest) returns (Book);
    rpc UpdateBook (UpdateBookRequest) returns (Book);
    rpc DeleteBook (DeleteBookRequest) returns (google.protobuf.Empty);
    rpc ListBooks (ListBookRequest) returns (ListBookResponse);
}


// Book Message

message Book {
    int64 id = 1;
    string title = 2;
    string author = 3;
    string isbn = 4;
    int32 publishedYear = 5;
    string summary = 6;
}


// Create Request

message CreateBookRequest {
    string title = 1;
    string author = 2;
    string isbn = 3;
    int32 publishedYear = 4;
    string summary = 5;
}


// Get Request

message GetBookRequest {
    int64 id = 1;
}


// Update Request

message UpdateBookRequest {
    int64 id = 1;
    string title = 2;
    string author = 3;
    string isbn = 4;
    int32 publishedYear = 5;
    string summary = 6;
}


// Delete Request

message DeleteBookRequest {
    int64 id = 1;
}


// List Request + Response

message ListBookRequest {
    int32 page = 1;
    int32 pageSize = 2;
}

message ListBookResponse {
    repeated Book books = 1;
    int32 total = 2;
}
